k8s_kind/auth-service/auth-service-db-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-auth-service
  namespace: auth-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-auth-service
  template:
    metadata:
      labels:
        app: db-auth-service
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            # - name: init-sql
            #   mountPath: /docker-entrypoint-initdb.d
          resources:
            requests:
              cpu: 1m
              memory: 100Mi
            limits:
              cpu: 10m
              memory: 250Mi
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-auth-pvc
        # - name: init-sql
        #   configMap:
        #     name: auth-db-init
