k8s_kind/auth-service/auth-service-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db-auth-service
  namespace: auth-ns
spec:
  type: ClusterIP
  selector:
    app: db-auth-service
  ports:
    - port: 5432
      targetPort: 5432
